алгоритм на основе Collections.disjoint